remove GPars dependency, eliminate JVM warnings in tests